--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -45,9 +45,6 @@ jobs:
         with:
           cosign-release: 'v1.4.0'
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-
       # Workaround: https://github.com/docker/build-push-action/issues/461
       - name: Setup Docker buildx
         uses: docker/setup-buildx-action@79abd3f86f79a9d68a23c75a09a9a85889262adf
@@ -87,7 +84,7 @@ jobs:
         with:
           context: .
           file: Dockerfile_MTUQ
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
