--- a/Dockerfile_MTUQ
+++ b/Dockerfile_MTUQ
@@ -1,14 +1,4 @@
-FROM --platform=linux/arm64 jupyter/minimal-notebook as stage-arm64
-USER jovyan
-RUN conda config --env --set subdir osx-arm64 \
-    && conda config --prepend channels conda-forge
-
-FROM --platform=linux/amd64 jupyter/minimal-notebook as stage-amd64
-USER jovyan
-RUN conda config --prepend channels conda-forge
-
-ARG TARGETARCH
-FROM stage-${TARGETARCH} as final
+FROM jupyter/minimal-notebook
 
 LABEL maintainer="Ian Wang"
 
@@ -19,17 +9,23 @@ RUN apt-get install -y wget ssh rsync less build-essential gfortran gdb vim nano
 
 USER jovyan
 
-RUN conda install obspy \
+RUN conda config --prepend channels conda-forge \
+    && conda install obspy \
     && conda install -c conda-forge pygmt \
     && conda install xarray \
-    && conda install cartopy
+    && conda install cartopy \
+    && conda install mpi4py \
+    && conda clean -afy \
+    && find /opt/conda/ -follow -type f -name '*.a' -delete \
+    && find /opt/conda/ -follow -type f -name '*.pyc' -delete \
+    && find /opt/conda/ -follow -type f -name '*.js.map' -delete \
+    && find /opt/conda/lib/python*/site-packages/bokeh/server/static -follow -type f -name '*.js' ! -name '*.min.js' -delete
 
 RUN mkdir /home/jovyan/scoped \
     && cd /home/jovyan/scoped \
     && git clone https://github.com/uafgeotools/mtuq.git \
     && cd mtuq \
     && pip install -e . \
-    && conda install mpi4py \
     && bash ./data/examples/unpack.bash
 
 RUN cd /home/jovyan/scoped \
